--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <li><a href="./recipes/holeinone.html">Hole-in-One Breakfast</a></li>
         <li><a href="./recipes/musclemommy.html">Muscle Mommy Yogurt</a></li>
     </ul>
+    <img src="./images/mpasta.jpg" alt="Mushroom pasta in a large pan with tongs grabbing pasta" height="310" width="430">
+    <img src="./images/hio.jpg" alt="A slice of bread with an egg cooked into the middle with the cut out circle of bread next to it, all on a plate" height="310" width="500">
+    <img src="./images/mmy.jpg" alt="Yogurt topped with fruit, honey, and granola" height="310" width="330">
 </body>
 </html>
